tests/fixtures/invalid/pow_bool_list.py
# Cannot call pow() with Bool, List[int]
x = pow(True, [1, 2, 3])
